# estrutura-de-dados

./: README.md  pyproject.toml
estrutura_de_dados/Aula_01/: README.md  classification.py  todoList.py
estrutura_de_dados/Aula_03/: README.md  doublyLinkedList.py  node.py
estrutura_de_dados/Aula_04/: README.md
estrutura_de_dados/Aula_05.1/: README.md  binaryTreeDict.py  node.py
estrutura_de_dados/Aula_05.2/: README.md  avlTree.py  node.py
estrutura_de_dados/Aula_06/: README.md  graph.py  tree.py
estrutura_de_dados/Aula_07/: README.md  foodStock.py  hashTable.py
estrutura_de_dados/Aula_2/: README.md  pilha.py  torreHanoi.py
tests/: test_classification.py  test_todoList.py
